--- a/source/index.html
+++ b/source/index.html
@@ -12,11 +12,11 @@ layout: default
   {% endfor %}
   <div class="pagination">
     {% if paginator.next_page %}
-      <a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
+      <a class="prev" href="{{paginator.next_page}}">&larr; 较早的文章</a>
     {% endif %}
-    <a href="/blog/archives">Blog Archives</a>
+    <a href="/blog/archives">文章列表</a>
     {% if paginator.previous_page %}
-    <a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
+    <a class="next" href="{{paginator.previous_page}}">较新的文章 &rarr;</a>
     {% endif %}
   </div>
 </div>
